# zlack

./: .gitignore  CHANGELOG.md  README.ko.md  README.md  TODO.md  build_dist.ps1  build_dist.sh  build_dist_fixed.ps1  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: update-version.js
src/: index.html
src-tauri/: Cargo.toml  preload.js  tauri.conf.json  tauri.fixed.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: icons.rs  main.rs  platform.rs
