[package]
name = "Zlack"
version = "1.1.0"
description = "A Tauri App"
authors = ["sanguneo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
lazy_static = "1.5.0"
tauri = { version = "1", features = [ "notification-all", "shell-open", "notification", "system-tray"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7.2"
windows = { version = "0.48", features = ["Win32_System_Com"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
