[package]
name = "Zlack"
version = "1.2.0"
description = "A lightweight Slack desktop client built with Tauri"
authors = ["sanguneo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
lazy_static = "1.5.0"
image = { version = "0.24", default-features = false, features = ["png", "ico"] }
tauri = { version = "1", features = [ "notification-all", "shell-open", "system-tray"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7.2"
windows = { version = "0.48", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
